--- a/TreasureDetector/src/index.html
+++ b/TreasureDetector/src/index.html
@@ -68,6 +68,8 @@
 
             </div>
         </div>
+
+        <iframe id="iframe" frameborder="0" scrolling="no"></iframe>
         <script src="js/app.js"></script>
     </body>
 </html>
