--- a/TreasureDetector/src/controller.html
+++ b/TreasureDetector/src/controller.html
@@ -40,8 +40,8 @@
             <input type="range" id="distanceSlider" min="0" value="100" max="100" step="1">
             <h1>Orientation</h1>
             <input type="range" id="orientationSlider" min="0" value="0" max="360" step="1">
-            <h1>Connect</h1>
             <button id="connect">Connect</button>
+            <button id="reset">Reset</button>
         </div>
         <script src="js/control.js"></script>
     </body>
