hideTreasure UI and animation fixed

--- a/TreasureDetector/src/index.html
+++ b/TreasureDetector/src/index.html
@@ -40,6 +40,17 @@
             Your browser does not support the audio element.
         </audio>
 
+        <div id="placeTreasure">
+          <img src="img/diamond.png" id="diamond" alt="">
+          <img src="img/verstop.png" id="verstop" alt="">
+          <img src="img/left.png" id="left" alt="">
+          <img src="img/right.png" id="right" alt="">
+          <div class="buttonWrapper">
+            <img src="img/placeButton.png" id="placeButton" alt="">  
+          </div>
+
+        </div>
+
         <div id="compass">
         </div>
 
