--- a/TreasureDetector/src/index.html
+++ b/TreasureDetector/src/index.html
@@ -35,6 +35,7 @@
         <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
+        <button id="placeTreasureBttn">Place treasure</button>
         <audio id="win">
             <source src="sound/win.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
