Fix for firefox border radius

--- a/TreasureDetector/src/index.html
+++ b/TreasureDetector/src/index.html
@@ -35,7 +35,6 @@
         <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
-        <button id="placeTreasureBttn">Place treasure</button>
         <audio id="win">
             <source src="sound/win.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
@@ -47,12 +46,13 @@
           <img src="img/left.png" id="left" alt="">
           <img src="img/right.png" id="right" alt="">
           <div class="buttonWrapper">
-            <img src="img/placeButton.png" id="placeButton" alt="">  
+            <img src="img/placeButton.png" id="placeButton" alt="">
           </div>
 
         </div>
 
-        <div id="compass">
+        <div id="compassContainer">
+            <div id="compass"></div>
         </div>
 
         <div id="gem">
