Added treasure detection signal on controller

--- a/TreasureDetector/src/controller.html
+++ b/TreasureDetector/src/controller.html
@@ -33,6 +33,13 @@
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="css/app.css">
+        <style>
+            html, body {
+                height: auto;
+                width: auto;
+                overflow: auto;
+            }
+        </style>
     </head>
     <body>
         <div class="sliders">
